# simple_nes_emulator

./: .gitignore  Cargo.toml
nes_backend/: Cargo.toml
nes_backend/src/: bit_operations.rs  bus.rs  emulator.rs  file_loading.rs  lib.rs  nes.rs  not_main_anymore.rs  rendering.rs  utils.rs
nes_backend/src/cartridge/: mod.rs
nes_backend/src/cpu/: addressing.rs  disassembler.rs  instructions.rs  mod.rs
nes_backend/src/implementations/: mod.rs
nes_backend/src/implementations/minifb/: minifb_rendering.rs  mod.rs
nes_backend/src/mapper/: mapper000.rs  mod.rs
nes_backend/src/ppu/: mod.rs  ppu_clock.rs  ppu_controls.rs
nes_backend/src/rendering/: mod.rs
nes_frontend/: Cargo.toml  index.html
nes_frontend/assets/: sw.js
nes_frontend/src/: app.rs  main.rs  old_app.rs
nes_frontend/src/app/: debug_screens.rs  display.rs  image.rs  screen.rs  utils.rs
nes_frontend/src/app/ui/: debug_screens.rs  mod.rs
nes_frontend/src/app/utils/: display.rs  mod.rs
