[package]
name = "nes_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"]}
error-iter = "0.4.1"
minifb = "0.28.0"
modular-bitfield = "0.13.0"
strum = "0.27.2"
strum_macros = "0.27.2"
log = "0.4.27"
env_logger = "0.11.9"
itertools = "0.14.0"
# pixels = "0.15.0"
# winit = "0.30.12"
# winit_input_helper = "0.17"
